Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11628

Ant file selection not working as expected

    XMLWordPrintable

Details

    • 3affbed2b6120ba33b9cd2b160da0602b810ba26

    Description

      The code in AndroidSettingsWidget::browseAntLocation() tries to let the file dialog preselect the file name of the ant script. It tries so by adding e.g. "ant.bat" as file filter. This does however not work (at least not on Windows). Any wrong file, such as "ant.cmd" can easily selected which leads to cryptic error meassages when building.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-11628
        # Subject Branch Project Status CR V

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes