Android: Fix parameters for the Ant script file dialog

Making sure that the file name field has "ant.bat" set, and
that the filtering really works.

This patch also ensures that native file separators are shown.

Task-Number: QTCREATORBUG-11628
Change-Id: Ibab8c145d0b832e5ad2e2ff62a81818e4044f13e
Reviewed-by: Daniel Teske <daniel.teske@digia.com>